Add auth-lobby routing, spawn points, and switch to English-first
Velocity: separate config.yml (velocity-config.yml) with lobby.auth-server
/ lobby.default-server so a network can route not-yet-authenticated
players through a dedicated auth lobby and auto-transfer them to the real
hub once they authenticate (premium players skip the lobby entirely).

Paper/Folia: new /rlogin spawn set/list/remove + join/firstjoin/login/
register, backed by spawns.yml. Any role left unassigned falls back to
Bukkit's own default (player stays where they disconnected).

English is now the default/primary language (general.language, Messages'
fallback) with Spanish bundled as a secondary translation; README and all
code comments translated to English for an international audience.

54 tests in rlogin-common still green.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_019qGp2vDQFJgRZGSyTMsrne